About page - Fix extra spacing between mission and team

--- a/app/styles/about.sass
+++ b/app/styles/about.sass
@@ -110,9 +110,6 @@
       top: 0
       
   #team
-    margin-top: 60px
-    @media (min-width: $screen-sm-min)
-      margin-top: 150px
     ul
       text-align: center
       margin-top: 40px
